# Multi-threaded-Web-Server

./: .gitignore  README.md
client/: CMakeLists.txt
client/src/: main.cpp
client/store/: clientHTML.html  commands.txt
server/: CMakeLists.txt
server/src/: main.cpp
server/store/: TXTTest.txt  newTest.txt
